--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
         </div>
     </header>
     <main id="container">
-        <article id="gif-info"></article>
+        <article id="gif-info">
+            <div id="status-container">
+                <div id="loader" class="hidden"><p id="load">Obteniendo información...</p></div>
+                <div id="resultado" class="hidden"></div>
+            </div>
+        </article>
     </main>
     <footer>
         <div id="info-personal">
