Arreglando id y clases

--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
 <body>
     <header>
         <h1>ZONA DE GIFS</h1>
-        <div id="contenedor-input">
-            <p id="text-input">¿Que gif buscas?</p>
+        <div id="contenedor_input">
+            <p id="text_input">¿Que gif buscas?</p>
             <input 
             type="text"
-            name="gif-input"
-            id="gif-input"
+            name="gif_input"
+            id="gif_input"
             placeholder="Escribe el nombre del gif">
-            <button type="button" id="search-btn">Buscar</button>
+            <button type="button" id="search_btn">Buscar</button>
         </div>
     </header>
     <main id="container">
-        <article id="gif-info">
-            <div id="status-container">
+        <article id="gif_info">
+            <div id="status_container">
                 <div id="loader" class="hidden"><p id="load">Obteniendo información...</p></div>
                 <div id="resultado" class="hidden"></div>
             </div>
         </article>
     </main>
     <footer>
-        <div id="info-personal">
+        <div id="info_personal">
             <p>
                 <strong>Desarrollador:</strong> Jorge Jacinto Ayvar
             </p>
@@ -42,17 +42,17 @@
                 <strong>Proyecto escolar</strong>
             </p>
         </div>
-        <div id="redes-sociales">
-            <a class="box-social" href="https://www.instagram.com/jacintoayvar/" target="_blank">
-            <p class="box-social"><strong>Instagram:</strong> JacintoAyvar
+        <div id="redes_sociales">
+            <a class="box_social" href="https://www.instagram.com/jacintoayvar/" target="_blank">
+            <p class="box_social"><strong>Instagram:</strong> JacintoAyvar
                 <img class="logo" src="assets/img/instagram.png" alt="logo de instagram">
             </p></a>
-            <a class="box-social" href="https://www.facebook.com/jorge.jacintoayvar" target="-blank">
-            <p class="box-social"><strong>Facebook:</strong> JorgeAyvar
+            <a class="box_social" href="https://www.facebook.com/jorge.jacintoayvar" target="-blank">
+            <p class="box_social"><strong>Facebook:</strong> JorgeAyvar
                 <img class="logo" src="assets/img/facebook.png" alt="logo de facebook">
             </p></a>
             <a href="https://wa.me/527443216963?text=Eres,%20la%20mera%20Verga!" target="_blank">
-            <p class="box-social"><strong>Whatsapp:</strong> 7443216963
+            <p class="box_social"><strong>Whatsapp:</strong> 7443216963
                 <img class="logo" src="assets/img/whatsapp.png" alt="logo de whatsapp">
             </p></a>
         </div>
